# n8n-cli

./: CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/n8n-copilot/: SKILL.md
.claude/skills/typer/: SKILL.md
cli/: pyproject.toml
cli/src/: __init__.py  cli.py  client.py
cli/tests/: test_cli.py
skills/n8n-copilot/: SKILL.md  examples.md
skills/n8n-copilot/docs/: index.md  snapshot-backups.md
skills/n8n-copilot/scripts/: preflight.sh
src/: cli.py
