[project]
name = "n8n-cli"
version = "0.1.0"
description = "CLI tool for reading and writing n8n workflows via the REST API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
]

[project.scripts]
n8n = "src.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
